Added things to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,11 @@ junk
 
 
 HISTORY
-libs
+// libs
 
 ..gitignore.un~
 .HISTORY.un~
+r.py.rp_cd_history.txt
+__pycache__
+r.py.rp_cd_history.txt
+r.py.rp_cd_history.txt
