--- a/.rprc
+++ b/.rprc
@@ -8,7 +8,7 @@
 import os,sys;sys.path.append(os.getcwd());del os,sys;
 
 ## Import the rp library's whole namespace. It's not nessecary, but it exposes a lot of useful functions without
-#from rp import *
+from rp import *
 
 ## Set the terminal's cursor to the shape of a line, instead of a block. I personally prefer this, but I've commented out because I don't know if you'd like it.
 #set_cursor_to_bar()
